// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli query execution workflow > carries retryability as explicit execution result data 1`] = `
{
  "detail": "database temporarily unavailable",
  "kind": "query_unavailable",
  "requestId": "req-5",
  "retryable": true,
}
`;

exports[`cli query execution workflow > emits execution workflow transition events in order 1`] = `
[
  {
    "actionType": "execute",
    "requestId": "req-9",
    "source": {
      "credentialsEncrypted": "encrypted",
      "credentialsIv": "iv",
      "displayName": null,
      "id": "source-1",
      "name": "warehouse",
      "organizationId": "org-1",
      "provider": "postgres",
      "sourceKey": "warehouse",
      "status": "active",
    },
    "sourceKey": "warehouse",
    "type": "source_loaded",
  },
  {
    "actionType": "execute",
    "normalizedSql": "SELECT answer FROM stats LIMIT 1000",
    "normalizedSqlChanged": true,
    "requestId": "req-9",
    "source": {
      "credentialsEncrypted": "encrypted",
      "credentialsIv": "iv",
      "displayName": null,
      "id": "source-1",
      "name": "warehouse",
      "organizationId": "org-1",
      "provider": "postgres",
      "sourceKey": "warehouse",
      "status": "active",
    },
    "sourceKey": "warehouse",
    "type": "query_validated",
  },
  {
    "actionType": "execute",
    "requestId": "req-9",
    "source": {
      "credentialsEncrypted": "encrypted",
      "credentialsIv": "iv",
      "displayName": null,
      "id": "source-1",
      "name": "warehouse",
      "organizationId": "org-1",
      "provider": "postgres",
      "sourceKey": "warehouse",
      "status": "active",
    },
    "sourceKey": "warehouse",
    "type": "credentials_loaded",
  },
  {
    "actionType": "execute",
    "elapsedMs": 12,
    "requestId": "req-9",
    "rowCount": 1,
    "source": {
      "credentialsEncrypted": "encrypted",
      "credentialsIv": "iv",
      "displayName": null,
      "id": "source-1",
      "name": "warehouse",
      "organizationId": "org-1",
      "provider": "postgres",
      "sourceKey": "warehouse",
      "status": "active",
    },
    "sourceKey": "warehouse",
    "type": "query_executed",
  },
  {
    "actionType": "execute",
    "detail": "write unavailable",
    "requestId": "req-9",
    "sourceId": "source-1",
    "sourceKey": "warehouse",
    "type": "usage_persist_failed",
  },
]
`;

exports[`cli query execution workflow > emits validation workflow transition events in order 1`] = `
[
  {
    "actionType": "validate",
    "requestId": "req-10",
    "source": {
      "credentialsEncrypted": "encrypted",
      "credentialsIv": "iv",
      "displayName": null,
      "id": "source-1",
      "name": "warehouse",
      "organizationId": "org-1",
      "provider": "postgres",
      "sourceKey": "warehouse",
      "status": "active",
    },
    "sourceKey": "warehouse",
    "type": "source_loaded",
  },
  {
    "actionType": "validate",
    "normalizedSql": "SELECT answer FROM stats LIMIT 1000",
    "normalizedSqlChanged": true,
    "requestId": "req-10",
    "source": {
      "credentialsEncrypted": "encrypted",
      "credentialsIv": "iv",
      "displayName": null,
      "id": "source-1",
      "name": "warehouse",
      "organizationId": "org-1",
      "provider": "postgres",
      "sourceKey": "warehouse",
      "status": "active",
    },
    "sourceKey": "warehouse",
    "type": "query_validated",
  },
]
`;

exports[`cli query execution workflow > keeps usage persistence best-effort in the driver 1`] = `
{
  "kind": "response_ready",
  "response": {
    "columns": [
      {
        "logicalType": "number",
        "name": "answer",
      },
    ],
    "elapsedMs": 18,
    "rowCount": 1,
    "rows": [
      [
        "42",
      ],
    ],
    "source": {
      "displayName": null,
      "id": "source-1",
      "provider": "postgres",
      "sourceKey": "warehouse",
      "status": "active",
    },
    "truncated": true,
  },
  "usagePersistence": {
    "detail": "write unavailable",
    "kind": "usage_persist_failed",
    "sourceId": "source-1",
  },
}
`;

exports[`cli query execution workflow > moves valid plans toward credential loading 1`] = `
{
  "loadCredentials": {
    "kind": "load_credentials",
    "normalizedSql": "SELECT * FROM stats LIMIT 1000",
    "requestId": "req-3",
    "source": {
      "credentialsEncrypted": "encrypted",
      "credentialsIv": "iv",
      "displayName": null,
      "id": "source-1",
      "name": "warehouse",
      "organizationId": "org-1",
      "provider": "postgres",
      "sourceKey": "warehouse",
      "status": "active",
    },
    "sourceName": "warehouse",
    "timeoutMs": 15000,
    "truncated": true,
  },
  "validateQuery": {
    "databaseType": "postgres",
    "kind": "validate_query",
    "requestId": "req-3",
    "source": {
      "credentialsEncrypted": "encrypted",
      "credentialsIv": "iv",
      "displayName": null,
      "id": "source-1",
      "name": "warehouse",
      "organizationId": "org-1",
      "provider": "postgres",
      "sourceKey": "warehouse",
      "status": "active",
    },
    "sourceName": "warehouse",
    "sql": "select * from stats",
    "timeoutMs": 15000,
  },
}
`;

exports[`cli query execution workflow > rejects non-queryable sources during planning 1`] = `
{
  "kind": "source_not_queryable",
  "provider": "github",
  "requestId": "req-2",
  "sourceName": "github-main",
  "status": "active",
}
`;

exports[`cli query execution workflow > returns a ready validation plan without loading credentials 1`] = `
{
  "kind": "ready",
  "normalizedSql": "SELECT answer FROM stats LIMIT 1000",
  "requestId": "req-7",
  "source": {
    "credentialsEncrypted": "encrypted",
    "credentialsIv": "iv",
    "displayName": null,
    "id": "source-1",
    "name": "warehouse",
    "organizationId": "org-1",
    "provider": "postgres",
    "sourceKey": "warehouse",
    "status": "active",
  },
  "sourceName": "warehouse",
  "timeoutMs": 20000,
  "truncated": true,
}
`;

exports[`cli query execution workflow > returns validation rejections before credential loading 1`] = `
{
  "detail": "Only SELECT queries are allowed. Got: delete",
  "kind": "query_rejected",
  "requestId": "req-8",
}
`;

exports[`cli query execution workflow > starts by loading the requested source 1`] = `
{
  "kind": "load_source",
  "orgSlug": "acme",
  "organizationId": "org-1",
  "requestId": "req-1",
  "sourceName": "warehouse",
  "sql": "select 1",
  "timeoutMs": null,
}
`;

exports[`cli query execution workflow > treats credential preparation failures as terminal workflow data 1`] = `
{
  "detail": "failed to decrypt credentials",
  "hint": "verify the source configuration and retry",
  "kind": "query_preparation_failed",
  "requestId": "req-4",
}
`;
